2007-07-30  Sanel <karijes@users.sourceforge.net>

	* Added const size() in List
	* Added operator bool() in List too

2007-07-28  Sanel <karijes@users.sourceforge.net>

	* List.h now contains own list implementation, altought needs some tests
	* Doxygen tags throught the code updated, due new doxygen version
	* Doxyfile updated too
	* Small replacement, '=' to KV_DELIM in Config
	* List test added
	* EDELIB_NAMESPACE replaced with EDELIB_NS_BEGIN/EDELIB_NS_END all over
	the code
	* system_data_dirs, system_config_dirs now uses list
	* Replaced vector in IconTheme with list

2007-07-26  Sanel <karijes@users.sourceforge.net>

	* Added get_allocated() in Config
	* IconTheme for Directories values now uses get_allocated()

2007-07-25  Sanel <karijes@users.sourceforge.net>

	* Config class is not any more limited with line and value sizes, althought
	section/key does (can't find any reason why would someone use
	unlimited sections/keys !)
	* Small fixup with clear() in Config class
	* Added tests for config_getline() functions, used internally by Config
	class
	* Finished remove_entry() in Config
	* Fixed strncpy issue when requested size in Config's get() is less than
	actuall since strncpy() does not terminate string
	* Sizes for get() are unsigned int now

2007-07-16  Sanel <karijes@users.sourceforge.net>

	* Forced environ outside edelib namespace
	* Added tests for Vedran's String fix
	* Added some perftests to watch container(s) behaviours on stringtok
	* Correct paths for jam cached data

2007-07-11  Sanel <karijes@users.sourceforge.net>
	* Newer autoconf versions require datarootdir to be present.
	Jamconfig.in and initjamfile.m4 are modified for that

2007-07-07  Sanel <karijes@users.sourceforge.net>
	
	* tests/mime.cpp, removed output from text/html since in newer
	versions of mime-types distributions, description is changed

2007-07-02  Sanel <karijes@users.sourceforge.net>

	* DirWatch can now return what file was changed and how