@@ -1,7 +1,18 @@
+2007-08-8  Sanel <karijes@users.sourceforge.net>
+
+	* Explicit disable List(const List&) and operator=(const List&)
+	* IconChooser uses list now
+	* DirWatch uses list too; since list have private copy ctor, found that
+	some parts of DirWatch would call it anyway (DirWatchEntry), unneededly copying 
+	container data; fixed with allocation on heap
+	* dir_list now uses list instead vector
+
 2007-07-30  Sanel <karijes@users.sourceforge.net>
 
 	* Added const size() in List
 	* Added operator bool() in List too
+	* Dumped non-const size() and empty() from List
+	* Added const empty() in List
 
 2007-07-28  Sanel <karijes@users.sourceforge.net>
 
